rusty-cdk-macros/tests/fails/origin_path_no_leading_slash.rs
use rusty_cdk_macros::origin_path;

fn main() {
    origin_path!("no-leading-slash");
}
