rusty-cdk-macros/tests/fails/origin_path_no_leading_slash.stderr
error: origin path should start with a / and should not end with / (but got no-leading-slash)
 --> tests/fails/origin_path_no_leading_slash.rs:4:5
  |
4 |     origin_path!("no-leading-slash");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `origin_path` (in Nightly builds, run with -Z macro-backtrace for more info)
